<resources>
    //Application Name
    <string name="app_name">LibSys Mobile</string>

    //Landing Page
    <string name="libSys_mobile_logo">LibSys Mobile Logo</string>
    <string name="title_tap_to_continue">Tap To Continue</string>

    //Login Navigation
    <string name="title_login">Login</string>
    <string name="title_create_account">Create Account</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="title_exit">Exit</string>

    //Login Page
    <string name="login_navigation_login_name_page_name">LoginPage</string>
    <string name="title_email_address">Email Address:</string>
    <string name="title_password">Password:</string>
    <string name="prompt_email">ex. LibSysMobile@Gmail.com</string>
    <string name="prompt_password">3-8 Characters</string>

    //Create Account Page
    <string name="login_navigation_create_account_name_page_name">CreateAccountPage</string>
    <string name="title_first_name">First Name:</string>
    <string name="title_last_name">Last Name:</string>
    <string name="title_date_of_birth">Date of Birth:</string>
    <string name="title_ssn">Last 4 Digits of SSN:</string>
    <string name="prompt_first_name">John</string>
    <string name="prompt_last_name">Doe</string>


    //Member Home Navigation
    <string name="title_home">Home</string>
    <string name="title_activity_testing">testing</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="member_home">Member Home</string>
    <string name="librarian_home">Librarian Home</string>
    <string name="administrator_home">Administrator Home</string>
    <string name="title_activity_home_navigation">home_navigation</string>
    <string name="search_for_member">Search for member</string>

    //Drawer
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="search">Search</string>

    <string name="member">LibSys Mobile - Member</string>
    <string name="librarian">LibSys Mobile - Librarian</string>
    <string name="admin">LibSys Mobile - Admin</string>
</resources>
