<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/login_navigation_login"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_login"
        android:visible="true" />

    <item
        android:id="@+id/login_navigation_create_account"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_create_account"
        android:visible="true" />

    <item
        android:id="@+id/login_navigation_reset_password"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:title="@string/title_reset_password"
        android:visible="true" />

    <item
        android:id="@+id/login_navigation_exit"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/title_exit"
        android:visible="true"/>

</menu>
