<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createAccount_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pages.CreateAccountPage">


    <EditText
        android:id="@+id/password_createAccount_textField"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/prompt_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/emailAddress_label"
        android:layout_width="98dp"
        android:layout_height="48dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/title_email_address"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39999998"
        tools:layout_height="wrap_content" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="98dp"
        android:layout_height="48dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/title_password"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_height="wrap_content" />

    <AutoCompleteTextView
        android:id="@+id/emailAddress_createAccount_textField"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/prompt_email"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39999998" />

    <AutoCompleteTextView
        android:id="@+id/lastName_createAccount_textField"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/prompt_last_name"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/lastName_label"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/title_last_name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:layout_height="wrap_content" />

    <AutoCompleteTextView
        android:id="@+id/firstName_createAccount_textField"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/prompt_first_name"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20999998"></AutoCompleteTextView>

    <TextView
        android:id="@+id/firstName_label"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/title_first_name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21"
        tools:layout_height="wrap_content" />

    <Button
        android:id="@+id/createAccount_button"
        android:layout_width="199dp"
        android:layout_height="68dp"
        android:text="@string/title_create_account"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755" />


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/login_navigation"
        android:layout_width="411dp"
        android:layout_height="58dp"
        android:layout_marginTop="675dp"
        android:background="?android:attr/windowBackground"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/login_navigation" />

    <TextView
        android:id="@+id/createAccount_title"
        android:layout_width="284dp"
        android:layout_height="80dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="622dp"
        android:text="@string/title_create_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>