<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:background="@drawable/background_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/password_label"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:text="@string/title_password"
        android:textAlignment="textStart"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/login_navigation"
        android:layout_width="411dp"
        android:layout_height="58dp"
        android:layout_marginTop="675dp"
        android:background="?android:attr/windowBackground"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/login_navigation" />

    <AutoCompleteTextView
        android:id="@+id/email_login_textField"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />

    <EditText
        android:id="@+id/password_login_textField"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415"
        tools:targetApi="o" />

    <!-- add android:onClick= to "loginOnClick" for production-->
    <Button
        android:id="@+id/login_button"
        android:layout_width="199dp"
        android:layout_height="68dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="125dp"

        android:text="@string/title_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="175dp"
        android:layout_height="80dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="622dp"
        android:text="@string/title_login"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/emailAddress_label"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:text="@string/title_email_address"
        android:textAlignment="textStart"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

</android.support.constraint.ConstraintLayout>